[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=80", "setuptools-scm>=8"]

[project]
authors = [{ name = "liu xue yan", email = "liu_xue_yan@foxmail.com" }]
description = "An extending constructor of PyYAML: include other YAML files into current YAML document"
name = "pyyaml-include"
readme = "README.md"

requires-python = ">=3.9"

dependencies = [
  "PyYAML~=6.0",
  "fsspec>=2021.04.0",
  "typing-extensions; python_version<'3.11'",
]

keywords = ["yaml", "PyYAML", "include", "yml"]

license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Markup",
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/tanbro/pyyaml-include"
Repository = "https://github.com/tanbro/pyyaml-include.git"
Documentation = "https://pyyaml-include.readthedocs.io/en/latest/"
Issues = "https://github.com/tanbro/pyyaml-include/issues"
Changelog = "https://github.com/tanbro/pyyaml-include/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
  { include-group = "docs" },
  { include-group = "mypy" },
  { include-group = "test" },
  { include-group = "ipykernel" },
]

mypy = ["mypy", "types-PyYAML"]

docs = [
  "importlib_metadata;python_version<'3.8'",
  "Sphinx>=7",
  "myst-parser",
  "furo",
  "linkify-it-py",
  "sphinx-copybutton",
  "sphinx-inline-tabs",
  "sphinx_tippy",
  "sphinx-version-warning",
]
test = ["coverage", "toml;python_version<='3.11'", "fsspec[http]"]

ipykernel = ["ipykernel", "pip"]

[tool.setuptools.package-data]
pyyaml_include = ["yaml_include/py.typed"]

[tool.setuptools_scm]
write_to = "src/yaml_include/_version.py"
