[metadata]
long_description = file: README.md, AUTHORS.md, CHANGELOG.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
keywords = yaml, PyYAML, include
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Development Status :: 5 - Production/Stable
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
addopts = --junitxml=test-reports/junit.xml
