[metadata]
name = pyyaml-include
description = Extending PyYAML with a custom constructor for including YAML files within YAML files
url = https://github.com/tanbro/pyyaml-include
license = GNU General Public License v3 or later (GPLv3+)
author = liu xue yan
author_email = liu_xue_yan@foxmail.com
keywords = yaml, PyYAML, include
long_description = file: README.md, AUTHORS.md, CHANGELOG.md
long_description_content_type = text/markdown
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.5
install_requires =
    PyYAML>=5.1,<7.0
tests_require =
    toml


[options.packages.find]
where = src

[options.extras_require]
toml = toml
all = toml
