[metadata]
name = pyyaml-include
author = liu xue yan
author_email = liu_xue_yan@foxmail.com
description = Extending PyYAML with a custom constructor for including YAML files within YAML files
long_description = file:"README.md"
keywords = yaml,PyYAML,include,yml
license  = GPLv3+

project_urls =
  Homepage = "https://github.com/tanbro/pyyaml-include"
  Repository = "https://github.com/tanbro/pyyaml-include.git"
  Documentation = "https://pyyaml-include.readthedocs.io/en/latest/"

classifiers =
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  # Development Status :: 1 - Planning
  # Development Status :: 2 - Pre-Alpha
  # Development Status :: 3 - Alpha
  # Development Status :: 4 - Beta
  Development Status :: 5 - Production/Stable
  # Development Status :: 6 - Mature
  # Development Status :: 7 - Inactive
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Programming Language :: Python :: 3.13
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: Text Processing :: Markup


[options]
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    PyYAML>=6.0,<7.0
package_dir=
    =src
packages=find:

[options.packages.find]
where=src


[options.extras_require]
toml =
  toml;python_version<='3.11'

[tool.setuptools_scm]
write_to = "src/yamlinclude/version.py"
